; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_console.c_Con_MessageMode3_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_console.c_Con_MessageMode3_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@cgvm = common dso_local global i32 0, align 4
@CG_CROSSHAIR_PLAYER = common dso_local global i32 0, align 4
@chat_playerNum = common dso_local global i32 0, align 4
@MAX_CLIENTS = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@chat_team = common dso_local global i32 0, align 4
@chatField = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@KEYCATCH_MESSAGE = common dso_local global i32 0, align 4
@cls = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Con_MessageMode3_f() #0 {
  %1 = load i32, i32* @cgvm, align 4
  %2 = load i32, i32* @CG_CROSSHAIR_PLAYER, align 4
  %3 = call i32 @VM_Call(i32 %1, i32 %2)
  store i32 %3, i32* @chat_playerNum, align 4
  %4 = load i32, i32* @chat_playerNum, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = load i32, i32* @chat_playerNum, align 4
  %8 = load i32, i32* @MAX_CLIENTS, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6, %0
  store i32 -1, i32* @chat_playerNum, align 4
  br label %17

11:                                               ; preds = %6
  %12 = load i32, i32* @qfalse, align 4
  store i32 %12, i32* @chat_team, align 4
  %13 = call i32 @Field_Clear(%struct.TYPE_5__* @chatField)
  store i32 30, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @chatField, i32 0, i32 0), align 4
  %14 = load i32, i32* @KEYCATCH_MESSAGE, align 4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cls, i32 0, i32 0), align 4
  %16 = xor i32 %15, %14
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cls, i32 0, i32 0), align 4
  br label %17

17:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @VM_Call(i32, i32) #1

declare dso_local i32 @Field_Clear(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
